[fix] align the input tooltip icon, and update the stories layout

--- a/src/components/tooltips/tooltips.scss
+++ b/src/components/tooltips/tooltips.scss
@@ -1,6 +1,9 @@
 @import "~@libui/components/styles/utils";
 
 .tooltipsContainer {
+  display: flex;
+  cursor: pointer;
+
   .childrenContainer {
     background: $text-color-2;
     border-radius: 5px;
