--- a/src/stories/panel/panel.stories.scss
+++ b/src/stories/panel/panel.stories.scss
@@ -5,7 +5,7 @@
 }
 
 .groupHeader {
-  margin-top: $space-10;
+  margin: $space-8 0 $space-3 0;
   color: grey;
 }
 
@@ -13,6 +13,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  margin: -$space-3 0 0 0;
 }
 
 .box {
@@ -20,7 +21,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  margin: 24px 0 0 0;
+  margin: $space-3 0 0 0;
 }
 
 .content {
